--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -92,6 +91,17 @@ main {
   font-size: 20px;
 }
 
+.login-time-details {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  font-size: 14px;
+}
+
+.login-time-details span {
+  font-weight: 500;
+}
+
 .user-loggedin {
   display: flex;
   align-items: center;
@@ -121,12 +131,21 @@ main {
   width: 100%;
 }
 } */
+@media (max-width: 800px) {
+  .header-end {
+    font-size: 12px;
+    gap: 10px;
+  }
+  .login-time-details {
+    font-size: 10px;
+  }
+}
 
 @media (max-width: 500px) {
-.topSection img {
-  margin-left: -14px 
- }
- .heading-text {
-  padding: 0 0px;
- }
+  .topSection img {
+    margin-left: -14px;
+  }
+  .heading-text {
+    padding: 0 0px;
+  }
 }
